<resources>
    <string name="app_name">Rabbit</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="start">start</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="your_points">Your Points:</string>
    <string name="_50">50</string>
    <string name="highest">Highest:</string>
    <string name="_100">100</string>
</resources>