<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/introbackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/restart"
            android:onClick="restart"
            android:contentDescription="@string/todo3"
            tools:ignore="ContentDescription,UsingOnClickInXml" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/exit"
            android:onClick="exit"
            android:contentDescription="@string/todo4"
            tools:ignore="ContentDescription,UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivNewHighest"
            android:background="@drawable/highest"
            android:visibility="gone"
            android:contentDescription="@string/todo5"
            tools:ignore="ContentDescription" />
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_points"
                    android:textSize="24sp"/>
                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_50"
                    android:textSize="50sp"
                    android:textColor="@android:color/holo_green_dark"
                    android:fontFamily="@font/bestfriend"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highest"
                    android:textSize="24sp"
                    android:layout_gravity="center|right"
                    tools:ignore="RtlHardcoded" />
                <TextView
                    android:id="@+id/tvHighest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textSize="24sp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:fontFamily="@font/bestfriend"/>
            </TableRow>
        </TableLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="80dp"/>
    </LinearLayout>


</LinearLayout>