<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bgc"
    android:gravity="center">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">
        <ImageView
            android:id="@+id/myrabbit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/santa_xxs"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/todo2"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/myrabbit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/santa_xxs"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/todo2"
            tools:ignore="ContentDescription" />
        <ImageView
        android:id="@+id/myrabbit3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/santa_xxs"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo2"
        tools:ignore="ContentDescription" />
        <ImageView
        android:id="@+id/myrabbit4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/santa_xxs"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo2"
        tools:ignore="ContentDescription" />
        <ImageView
        android:id="@+id/myrabbit5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/santa_xxs"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo2"

        tools:ignore="ContentDescription" />

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:fontFamily="@font/bestfriend"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:backgroundTint="#bb8044"
        android:onClick="startGame"
        tools:ignore="UsingOnClickInXml" />






</LinearLayout>